2009-08-31 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: add amstar and amgtar to suid section of
	  %files for server.

2009-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Give only a warning if user specified path
				    is not correct for gtar and star.

2009-08-28  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Device.pod: be explicit: finish_file is not for read
	  mode

2009-08-26  Paul C. Mantz <pcmantz@zmanda.com>
	* xfer-src/filter-process.c: fixed write warnings which were
  	  breaking Ubuntu builds

2009-08-26  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Logfile.swg: added four previously omitted program
	types
	* installcheck/Amanda_Logfile.pl: regression tests for the program
	types

2009-08-26  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4 (AMANDA_PROG_STAR): New macro to find star.
	* configure.in: Use AMANDA_PROG_STAR.

2009-08-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/components.m4: Fix --with-amrecover=yes

2009-08-25  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmp-protocol.h: Remove file.
	* ndmp-src/Makefile.am (noinst_HEADERS): Remove ndmp-protocol.h.
	* common-src/Makefile.am (noinst_HEADERS): Add ndmp-protocol.h.

2009-08-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/ndmp-device.m4: Add AMANDA_NDMP_DEVICE.
	* configure.in: Use AMANDA_NDMP_DEVICE.
	* common-src/conffile.c: Add ndmp_proxy_port, ndmp_proxy_debug_file
				 andndmp_proxy_debug_level.
	* common-src/conffile.h: CNF_NDMP_PROXY_PORT, CNF_NDMP_PROXY_DEBUG_FILE
				 and CNF_NDMP_PROXY_DEBUG_LEVEL
	* common-src/ndmp-protocol.h: Define protocol between amanda and
				      ndmp-proxy.
	* common-src/util.c (start_ndmp_proxy, stop_ndmp_proxy,
			     connect_to_ndmp_proxy): New functions.
	* common-src/util.h: Add prototype for new functions.
	* device-src/Makefile.am: Build ndmp-device.
	* device-src/device.c: Use ndmp-device.