@@ -115,42 +115,6 @@ typedef struct {
 	    dump_dumpfile_t(self);
 	}
 
-	gboolean matches_dumpspecs(amglue_dumpspec_list *dumpspecs) {
-	    char level_str[100];
-
-	    /* ignore anything that's not a (split) dumpfile */
-	    if(self->type != F_DUMPFILE && self->type != F_SPLIT_DUMPFILE)
-		return FALSE;
-
-	    g_snprintf(level_str, sizeof(level_str), "%d", self->dumplevel);
-
-	    while (dumpspecs) {
-		dumpspec_t *ds = (dumpspec_t *)dumpspecs->data;
-		dumpspecs = g_slist_next(dumpspecs);
-
-		if (ds->host && *ds->host
-		    && !match_host(ds->host, self->name))
-		    continue;
-
-		if (ds->disk && *ds->disk
-		    && !match_disk(ds->disk, self->disk))
-		    continue;
-
-		if (ds->datestamp && *ds->datestamp
-		    && !match_datestamp(ds->datestamp, self->datestamp))
-		    continue;
-
-		if (ds->level && *ds->level
-		    && !match_level(ds->level, level_str))
-		    continue;
-
-		/* passed all the checks, so it's a match */
-		return TRUE;
-	    }
-
-	    return FALSE;
-	}
-
 	%newobject summary;
 	char *summary(void) {
 	    return summarize_header(self);
@@ -158,7 +122,7 @@ typedef struct {
     }
 } dumpfile_t;
 
-%newobject from_string;
+%newobject C_from_string;
 %inline %{
 dumpfile_t *C_from_string(const char *string) {
     dumpfile_t *result = g_new(dumpfile_t, 1);
@@ -182,4 +146,15 @@ sub from_string {
     shift; # ignore class
     return C_from_string(@_);
 }
+
+package Amanda::Header::Header;
+
+# point $hdr->matches_dumpspecs() to Amanda::Cmdline::header_matches_dumpspecs.  When
+# Amanda is built with --without-server, Amanda::Cmdline is missing, so this will fail.
+# Note that this assumes the user has already use'd Amanda::Cmdline.
+sub matches_dumpspecs {
+    Amanda::Cmdline::header_matches_dumpspecs(@_);
+}
+
+package Amanda::Header;
 %}
