@@ -1,3 +1,10 @@
+2009-08-31  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Cmdline.swg perl/Amanda/Header.swg: don't depend on
+	  cmdline.h in a client-only package
+	* perl/Amanda/Cmdline.pod perl/Amanda/Header.pod: adjust docs
+	* installcheck/Amanda_Cmdline.pl installcheck/Amanda_Header.pl: adjust
+	  tests
+
 2009-08-31 Dan Locks <dwlocks@zmanda.com>
 	* packaging/rpm/amanda.spec: add amstar and amgtar to suid section of
 	  %files for server.
